--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@shadcn/ui": "^0.0.4",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.12",
@@ -86,6 +86,8 @@
     "drizzle-kit": "^0.30.6",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
