--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,11 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 .env*.local
+
+# Serwist
+public/sw.js
+public/sw.js.map
+public/worker-*.js
+public/worker-*.js.map
+public/workbox-*.js
+public/workbox-*.js.map
