--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@serwist/background-sync": "^9.0.13",
+    "@serwist/next": "^9.0.13",
+    "@serwist/sw": "^9.0.13",
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/blob": "^1.0.0",
     "@vercel/kv": "^3.0.0",
@@ -89,6 +92,7 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "prettier": "^3.5.3",
+    "serwist": "^9.0.13",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.3",
