--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/supabase-adapter": "^1.8.0",
     "@hookform/resolvers": "^5.0.1",
     "@knocklabs/client": "^0.14.3",
+    "@knocklabs/node": "^0.6.19",
     "@knocklabs/node-sdk": "^0.1.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
