--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,29 @@
 # Next.js Environment Configuration
 NODE_ENV=development
 
-# NextAuth.js Configuration
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-nextauth-secret-key-replace-this-in-production
+# NextAuth.js v5 Configuration
+AUTH_URL=http://localhost:3000
+AUTH_SECRET=your-auth-secret-key-replace-this-in-production
+# Legacy variables (can be removed after full migration)
+# NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_SECRET=your-nextauth-secret-key-replace-this-in-production
 
 # Vercel Database URLs
 DATABASE_URL=postgres://username:password@host:port/database-name
 KV_URL=redis://username:password@host:port
 BLOB_READ_WRITE_TOKEN=your-vercel-blob-read-write-token
 
+# Supabase Configuration
+SUPABASE_URL=your-supabase-url
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+
 # Authentication Providers
 EMAIL_SERVER=smtp://username:password@host:port
 EMAIL_FROM=noreply@tnjusticebus.org
 
-# SMS Provider (Twilio)
-TWILIO_ACCOUNT_SID=your-twilio-account-sid
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-TWILIO_PHONE_NUMBER=your-twilio-phone-number
+# SMS Provider (Knock)
+KNOCK_API_KEY=your-knock-api-key
+KNOCK_SIGNING_KEY=your-knock-signing-key
 
 # Email Provider (Resend)
 RESEND_API_KEY=your-resend-api-key
