--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
-    "next-auth": "^4.24.11",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "pg": "^8.14.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
