--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@knocklabs/client": "^0.14.3",
     "@knocklabs/node": "^0.6.19",
     "@knocklabs/node-sdk": "^0.1.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
