--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "db:migrate": "tsx src/db/migrate.ts"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.9",
     "@auth/supabase-adapter": "^1.8.0",
     "@hookform/resolvers": "^5.0.1",
     "@knocklabs/client": "^0.14.3",
     "@knocklabs/node": "^0.6.19",
     "@knocklabs/node-sdk": "^0.1.0",
+    "@mastra/core": "^0.8.2",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
@@ -52,6 +54,7 @@
     "@vercel/blob": "^1.0.0",
     "@vercel/kv": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
+    "ai": "4.2.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
