--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "types": ["@serwist/next/typings"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "vitest.config.ts", "**/*.test.ts", "**/*.test.tsx", "src/test/**/*"]
 }
