--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@knocklabs/cli": "^0.1.20",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.1.3",
     "@testing-library/jest-dom": "^6.6.3",
