--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@knocklabs/node": "^0.6.19",
     "@knocklabs/node-sdk": "^0.1.0",
     "@mastra/core": "^0.8.2",
+    "@opentelemetry/api": "^1.9.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
@@ -109,6 +110,7 @@
     "eslint-plugin-tailwindcss": "^3.18.0",
     "fake-indexeddb": "^6.0.0",
     "happy-dom": "^13.10.1",
+    "ignore-loader": "^0.1.2",
     "prettier": "^3.5.3",
     "serwist": "^9.0.13",
     "tailwindcss": "^4",
