--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.9",
+    "@ai-sdk/react": "^1.2.8",
     "@hookform/resolvers": "^5.0.1",
     "@knocklabs/client": "^0.14.3",
     "@knocklabs/node": "^0.6.19",
