--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.6.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
